# portfolio-chatbot

./: .gitignore  deployement-readme.md  next.config.js  package-lock.json  package.json  vercel.json
backend/: pyproject.toml  requirements.txt
backend/data/: bot.txt  journey.txt
backend/scripts/: build_json_store.py
data/: about.txt  bot.txt  cv.txt  journey.txt
frontend/: package-lock.json  package.json
frontend/lib/: vectorSearch.js
frontend/pages/: index.js
frontend/pages/api/: chat.js
pages/: _document.js  index.js
pages/api/: chat.js
public/: vector_store.json
scripts/: build_json_store.py
