[project]
name = "rag-cv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.8",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.0",
    "sentence-transformers>=5.2.2",
]
